# mcp-presentation-to-ai-video-with-own-voice

./: CLAUDE.md  README.md  pyproject.toml
scripts/: chatterbox_local_tts.py  manage_keys.py  start_server.sh  update_tunnel_url.sh
src/mcp_presentation_video/: __init__.py  __main__.py  config.py  conversion.py  pipeline.py  server.py  video.py  voices.py
src/mcp_presentation_video/api/: __init__.py  app.py  auth.py  job_store.py  models.py  worker.py
src/mcp_presentation_video/api/routes/: admin.py  jobs.py  voices.py
src/mcp_presentation_video/client/: __init__.py  api_client.py  config.py  mcp_client.py
src/mcp_presentation_video/tts/: __init__.py  base.py  chatterbox.py  openai_tts.py
